--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <p> <img src="geesepic.JPG" alt="geesepic" height=250 width=250 class="enlarge-onhover">
       <img src="0CA20EB9-D0DE-493D-BE5A-81C8E07024BB.JPG" alt="baby raye with ice cream" height=250 width=250 class="enlarge-onhover">
       <img src="LonelyRC.JPG" alt="lonely raye" height=250 width=250 class="enlarge-onhover">
-      <img src="SignMan.JPG" alt="copy cat raye" height=250 width=250 class="enlarge-onhover">
+      <img src="SignMan.jpg" alt="copy cat raye" height=250 width=250 class="enlarge-onhover">
       <img src="ParisPic.JPG" alt="paris raye" height=250 width=250 class="enlarge-onhover"> </p>
 
 
